--- a/assets/style.css
+++ b/assets/style.css
@@ -33,3 +33,30 @@ a[href^="http"]::after {
 pre > code.sourceCode {
   white-space: pre-wrap;
 }
+
+header,
+nav {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+nav {
+  border-bottom: 1px solid black;
+}
+
+#main-title a {
+  color: black;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+.container {
+  width: 90%;
+  max-width: 40em;
+  margin: 0 auto;
+}
